add message store

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
 
     <main>
       <p class="title">Notifications</p>
-      <ul id="notifications" class="list"></ul>
+      <ul id="notifications" class="none"></ul>
 
       <form id="messageForm" class="none">
         <input
